# smart-cracker

./: CMakeLists.txt  README.md
include/: cracker.h
src/: main.cpp
